<resources>
    <string name="app_name">ATON</string>
    <string name="inputDigits">.@~-,:*?!#/\\=+?^;%$()[]{}|`&lt;&gt;&amp;&quot;&apos;_0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="inputDigitsMnemonic">&#160;abcdefghijklmnopqrstuvwxyz</string>
    <string name="permissionFailureTitleText">权限申请失败</string>
    <string name="permissionFailureMessageText">我们需要的一些权限申请失败，请您到设置页面手动授权，否则功能无法正常使用！</string>
    <string name="permissionFailureButtonText">设置</string>
    <string name="permissionRationaleTitleText">授权已被拒绝</string>
    <string name="permissionRationaleMessageText">您已经拒绝过授权此权限，没有此权限功能无法正常使用，赶快授权此权限给我们！</string>
    <string name="permissionRationalePositiveButtonText">授权</string>
    <string name="permissionRationaleNegativeButtonText">拒绝</string>
    <string name="serviceLicenseAgreement">服务及隐私条款</string>
    <string name="serviceProtocol">《PlatON钱包客户端服务协议》</string>
    <string name="serviceProtocolUpdateTime">最近更新于：2018年2月3日</string>
    <string name="serviceProtocolContent">Copyright (C) 2007 Free Software Foundation, Inc. \n%1$s
     \nEveryone is permitted toAddress copy and distribute verbatim copies
     of this license document, but changing it is not allowed.

      \nThe GNU General Public License is a free, copyleft license for
    software and other kinds of works.

      \nThe licenses for most software and other practical works are designed
    toAddress take away your freedom toAddress share and change the works.  By contrast,
    the GNU General Public License is intended toAddress guarantee your freedom toAddress
    share and change all versions of a program--toAddress make sure it remains free
    software for all its users.  We, the Free Software Foundation, use the
    GNU General Public License for most of our software; it applies also toAddress
    any other work released this way by its authors.  You can apply it toAddress
    your programs, too.

      \nWhen we speak of free software, we are referring toAddress freedom, not
    price.  Our General Public Licenses are designed toAddress make sure that you
    have the freedom toAddress distribute copies of free software (and charge for
    them if you wish), that you receive source code or can get it if you
    want it, that you can change the software or use pieces of it in new
    free programs, and that you know you can do these things.

      \nTo protect your rights, we need toAddress prevent others fromAddress denying you
    these rights or asking you toAddress surrender the rights.  Therefore, you have
    certain responsibilities if you distribute copies of the software, or if</string>
    <string name="serviceProtocolAgree">我已经仔细阅读并同意以上条款</string>
    <string name="btnContinue">继续</string>
    <string name="platONSlogan">一切皆可计算</string>
    <string name="btnCreatewallet">创建钱包</string>
    <string name="btnImportwallet">导入钱包</string>
    <string name="createIndividualWallet">创建钱包</string>
    <string name="importIndividualWallet">导入钱包</string>
    <string name="hdIndividualWallet">选择钱包</string>
    <string name="name">钱包名称:</string>
    <string name="password">钱包密码:</string>
    <string name="password_with_colon">密码：</string>
    <string name="passwordLimit">*不少于6位字符，建议混合大小写、数字、特殊字符</string>
    <string name="createIndividualWalletTips">注意：请务必牢记钱包密码，服务器不会存储您的密码，遗忘丢失将无法找回！</string>
    <string name="passwordTips">两次密码不一致</string>
    <string name="validPasswordEmptyTips">密码不能为空</string>
    <string name="validPasswordTips">密码至少6个字符</string>
    <string name="validRepeatPasswordEmptyTips">确认密码不能为空</string>
    <string name="create">创建钱包</string>
    <string name="create_wallet">创建钱包</string>
    <string name="setPassword">不少于6位字符，建议混合大小写、数字、符号</string>
    <string name="repeatPassword">确认钱包密码</string>
    <string name="strength">强度</string>
    <string name="weak">弱</string>
    <string name="so_so">一般</string>
    <string name="good">强</string>
    <string name="strong">很好</string>
    <string name="keystore">钱包文件(.json)</string>
    <string name="keystoreContent">请输入钱包文件(.json)内容</string>
    <string name="mnemonicPhrase">助记词</string>
    <string name="privateKey">私钥</string>
    <string name="importIndividualWalletResume">直接复制粘贴您之前生成的钱包文件(.json)内容至输入框，或者扫描钱包文件内容生成的二维码录入。</string>
    <string name="startImporting">开始导入</string>
    <string name="walletPassword">输入钱包密码</string>
    <string name="nameOfWallet">输入钱包名称</string>
    <string name="nameOfAddress">输入地址名称</string>
    <string name="addressOfWallet">输入钱包地址</string>
    <string name="importMnemonicPhraseResume">请将记下的助记词按顺序填入以下表格中，在每个助记词输入完成后按“空格”键可以跳转到下个单词，使用助记词导入的同时需要设定钱包密码。</string>
    <string name="inputMnemonicPhraseTips">请输入助记词，用空格分割</string>
    <string name="importPrivateKeyResume">输入私钥内容至输入框，或者通过扫描私钥内容生成的二维码录入。请留意字符大小写。使用私钥导入的同时需要设定钱包密码。</string>
    <string name="inputPrivateKeyTips">请输入私钥</string>
    <string name="backupWallet">备份钱包</string>
    <string name="backupMnemonic">备份助记词</string>
    <string name="create_success">创建成功</string>
    <string name="backupWalletDescription">最后一步，备份钱包</string>
    <string name="backupWalletResume">助记词由12个常见英文单词组成，如果泄露，无需密码即可获取钱包资产。请将助记词抄写在纸上并保存在安全的地方，不要保存在网上以免被不法分子盗取。</string>
    <string name="startBackup">开始备份</string>
    <string name="InputWalletPassword">请输入密码进行确认</string>
    <string name="msg_delete_wallet">请输入钱包密码进行删除确认</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="yes">确认</string>
    <string name="no">取消</string>
    <string name="donotScreenshot">请勿截图</string>
    <string name="backupMnemonicResume">如果有人获取了您的助记词，将可以直接获取您的资产！请抄写下助记词并存放在安全的地方。</string>
    <string name="backupPrivateKey">如果有人获取了您的私钥，将可以直接获取您的资产！请确保私钥存放在安全的地方。</string>
    <string name="backupKeystore">如果有人获取了您的钱包文件(.json)，将可以直接获取您的资产！请确保钱包文件(.json)存放在安全的地方。</string>
    <string name="understood">我知道了</string>
    <string name="understood1">我知道了</string>
    <string name="backupMnemonicTitle">请抄写下方助记词，我们将在下一步进行验证</string>
    <string name="backupMnemonicDescrition">助记词用于恢复钱包或重置钱包密码，请将它准确抄写在纸上并存放在只有您知道的安全地点。</string>
    <string name="next">下一步</string>
    <string name="individual_wallet">普通钱包</string>
    <string name="shared_wallet">联名钱包</string>
    <string name="verificationOfMnemonic">验证助记词</string>
    <string name="verificationOfMnemonicTitle">请按顺序点击助记词，以确认您已经正确备份。</string>
    <string name="completeBackup">完成备份</string>
    <string name="submit">确认</string>
    <string name="empty">清空</string>
    <string name="msg_no_wallet">还没有钱包</string>
    <string name="msg_no_shared_wallet">还没有联名钱包</string>
    <string name="msg_no_individual_wallet">还没有普通钱包</string>
    <string name="action_create_wallet">创建钱包</string>
    <string name="action_import_wallet">导入钱包</string>
    <string name="nav_property">钱包</string>
    <string name="nav_vote">投票</string>
    <string name="nav_me">我的</string>
    <string name="disclaimer">免责声明</string>
    <string name="disclaimerResume">请确保已备份的钱包保存在安全地方，ATON不承担任何钱包丢失、被盗、忘记密码等原因产生的资产损失！</string>
    <string name="backupFailed">验证失败</string>
    <string name="backupMnemonicFailedResume">请检查助记词顺序！</string>
    <string name="manage">钱包管理</string>
    <string name="exportPrivateKey">导出私钥</string>
    <string name="exportKeystore">导出钱包文件(.json)</string>
    <string name="backupMnemonics">备份助记词</string>
    <string name="msg_backup_wallet">备份</string>
    <string name="changeWalletName">修改名称</string>
    <string name="formatError">钱包名称格式错误</string>
    <string name="validWalletNameTips">请输入1-20位字符</string>
    <string name="validKeystoreEmptyTips">钱包文件(.json)不能为空</string>
    <string name="validPrivateKeyEmptyTips">私钥不能为空</string>
    <string name="validMnenonicEmptyTips">助记词不能为空</string>
    <string name="validWalletNameEmptyTips">钱包名称不能为空</string>
    <string name="validWalletAddressEmptyTips">钱包地址不能为空</string>
    <string name="validSharedWalletNameEmptyTips">联名钱包名称不能为空</string>
    <string name="back">返回</string>
    <string name="qrCode">二维码</string>
    <string name="exportPrivateKeyTips">注意：不要截图，请检查周围，以防他人偷看或拍摄，请妥善保管私钥，切勿存储在网盘中</string>
    <string name="exportKeyStoreTips">注意：不要截图，请检查周围，以防他人偷看或拍摄，请妥善保管钱包文件，切勿存储在网盘中</string>
    <string name="copy">复制</string>
    <string name="msg_balance">余额</string>
    <string name="transactions">交易记录</string>
    <string name="me_transactions">交易记录</string>
    <string name="sendATP">发送&#160;Energon</string>
    <string name="actionSendATP">下一步</string>
    <string name="msg_send_transaction">发送</string>
    <string name="action_receive_transaction">接收</string>
    <string name="vote">投票</string>
    <string name="voting">投票</string>
    <string name="wallet_address">钱包地址</string>
    <string name="amount">发送金额</string>
    <string name="delegate_amount">委托数量</string>
    <string name="withdraw_amount">赎回数量</string>
    <string name="submissionAmount">交易数量</string>
    <string name="pay_wallet">支付钱包</string>
    <string name="change">切换钱包</string>
    <string name="select_fee">交易费用</string>
    <string name="cheaper">更便宜</string>
    <string name="faster">更快速</string>
    <string name="send_transaction">发送确认</string>
    <string name="vote_transaction">投票确认</string>
    <string name="wallet_name">钱包名称</string>
    <string name="wallet_name_with_colon">钱包名称：</string>
    <string name="public_key">公钥</string>
    <string name="sharing">分享给朋友</string>
    <string name="fromAddress">From</string>
    <string name="toAddress">To</string>
    <string name="wallet_balance">%1$s&#160;Energon</string>
    <string name="transaction_detail">交易详情</string>
    <string name="select_wallet">选择钱包</string>
    <string name="select_address">选择地址</string>
    <string name="create_shared_wallet">创建联名钱包</string>
    <string name="select_owner">选择关联钱包</string>
    <string name="shared_owners">联名用户数量</string>
    <string name="required_signatures">所需签名数</string>
    <string name="wallet_manage">钱包管理</string>
    <string name="address_book">地址薄</string>
    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="about">关于</string>
    <string name="aboutUs">关于我们</string>
    <string name="service_agreement">服务协议</string>
    <string name="official_community">官方社区</string>
    <string name="add">添加</string>
    <string name="address">地址</string>
    <string name="msg_marked_words">地址存在本地，删除APP前请先备份</string>
    <string name="address_name_cannot_be_empty">地址名称不能为空</string>
    <string name="address_cannot_be_empty">地址不能为空</string>
    <string name="save">保存</string>
    <string name="chinese">简体中文</string>
    <string name="english">English</string>
    <string name="purse">钱包</string>
    <string name="unlock">解锁</string>
    <string name="unlockWithWalletPasswordTitle">钱包密码解锁</string>
    <string name="unlockWithWalletPasswordDesc">请使用选定的钱包密码验证解锁</string>
    <string name="language">语言</string>
    <string name="type">交易类别</string>
    <string name="time">时间</string>
    <string name="energon_price">手续费</string>
    <string name="wallet">钱包</string>
    <string name="ticketPrice">票价</string>
    <string name="action_default">默认</string>
    <string name="reward">激励</string>
    <string name="location">区域</string>
    <string name="staked">质押金</string>
    <string name="voteNum">投票数</string>
    <string name="nodeInfo">节点信息</string>
    <string name="nodeId">节点ID</string>
    <string name="voteFor">投票给</string>
    <string name="hint_search_vote">输入节点账户查询</string>
    <string name="unlocked_delegate">未锁定委托</string>
    <string name="unlocked_delegate_des">委托大约在6.1小时内完成锁定，未锁定的委托没有收益，赎回的委托立即到账。</string>
    <string name="released_delegate">已解除委托</string>
    <string name="released_delegate_des">验证节点退出，委托自动解除，需要主动赎回委托。</string>
    <string name="action_copy_link">复制链接</string>
    <string name="action_open_browser">在浏览器中打开</string>
    <string name="detail_wait_undelegate">待赎回委托</string>
    <string name="detail_tips_content">一旦节点退出，原委托与节点解除关联，委托失效，需要主动赎回委托</string>
</resources>