<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ffffff"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <com.juzix.wallet.component.widget.CommonTitleBar
        android:id="@+id/commonTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ctb_left_drawable="@drawable/icon_back_black"
        app:ctb_title="@string/unlockWithWalletPasswordTitle"/>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="14dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp">

            <TextView
                style="@style/Text.000000.14"
                android:text="@string/unlockWithWalletPasswordDesc" />

            <TextView
                android:layout_marginTop="16dp"
                android:id="@+id/tv_select_wallet"
                style="@style/Text.61646e.16"
                android:text="@string/purse" />

            <include
                layout="@layout/include_change_wallet" />

            <TextView
                android:layout_marginTop="16dp"
                android:id="@+id/tv_transation_amount"
                style="@style/Text.61646e.16"
                android:text="@string/password" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edittext_underline"
                android:hint="@string/walletPassword"
                android:inputType="textPassword"
                android:maxLength="32"
                android:textColor="@color/color_000000"
                android:textColorHint="@color/color_b6bbd0"
                android:textSize="12sp"/>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn_unlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:background="@drawable/bg_shape_button1"
                android:fontFamily="normal"
                android:gravity="center"
                android:text="@string/unlock"
                android:textAllCaps="false"
                android:textColor="@color/color_d8d8d8"
                android:textSize="16sp" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</LinearLayout>