<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingTop="10dp"
    android:paddingRight="16dp">

    <RadioGroup
        android:id="@+id/rg_select_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="6dp"
        android:divider="@drawable/divider_vote_ticket_radio_group"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:showDividers="middle">

        <RadioButton
            android:id="@+id/rb_default"
            style="@style/Text.105cfe.16"
            android:button="@null"
            android:text="@string/action_default" />

        <RadioButton
            android:id="@+id/rb_reward"
            style="@style/Text.000000.13"
            android:button="@null"
            android:text="@string/reward" />

        <RadioButton
            android:id="@+id/rb_location"
            style="@style/Text.000000.13"
            android:button="@null"
            android:text="@string/location" />
    </RadioGroup>

    <ImageView
        android:id="@+id/iv_search_vote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="6dp"
        android:contentDescription="searchVote"
        android:foregroundGravity="center"
        android:src="@drawable/icon_search_vote_big" />

    <com.juzix.wallet.component.widget.ClearEditText
        android:id="@+id/et_search_vote"
        style="@style/Text.000000.13"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_search_vote"
        android:gravity="center_vertical|left"
        android:hint="@string/hint_search_vote"
        android:lines="1"
        android:textColorHint="@color/color_b6bbd0"
        android:textCursorDrawable="@drawable/bg_edittext_cursor"
        android:visibility="gone" />

</FrameLayout>
